manifests/tenants/mosaic/face_detection/network-policy/egress-to-kube-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-face-detection-to-kube-dns-access
  namespace: mosaic-face-detection
  annotations:
    kubernetes.io/description: allow face-detection to perform DNS lookups via kube-dns
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-face-detection
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
