manifests/tenants/mosaic/face_detection/network-policy/ingress-from-host.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-face-detection-ingress-from-host
  namespace: mosaic-face-detection
  annotations:
    kubernetes.io/description: allows kubelet grpc health checks (liveness/readiness probes) for face detection pods
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-face-detection
  ingress:
    # Allow grpc health checks from kubelet (host)
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "40040"
              protocol: TCP
