manifests/tenants/mosaic/face_detection/network-policy/ingress-from-networking.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-face-detection-grpc-ingress
  namespace: mosaic-face-detection
  annotations:
    kubernetes.io/description: allows grpc gateway to call the face detection grpc endpoint
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-face-detection
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: mosaic-grpc-gateway
      toPorts:
        - ports:
            - port: "40040"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-face-detection-envoy-l7lb-ingress
  namespace: mosaic-face-detection
  annotations:
    kubernetes.io/description: allows cillium envoy l7lb to call the face-detection
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-face-detection
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "40040"
              protocol: TCP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mosaic-face-detection-from-mosaic-cloudflare-tunnel-access
  namespace: mosaic-face-detection
  annotations:
    kubernetes.io/description: allows access from mosaic cloudflare tunnel
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: mosaic-face-detection
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflare-tunnel-mosaic
      toPorts:
        - ports:
            - port: "40040"
              protocol: TCP
